--- a/BlazorApp1/BlazorApp1.csproj
+++ b/BlazorApp1/BlazorApp1.csproj
@@ -7,7 +7,9 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0-preview.4.22229.2" />
       <PackageReference Include="MudBlazor" Version="6.0.10" />
+      <PackageReference Include="System.Web.Mvc.Extensions" Version="1.1.1.2" />
     </ItemGroup>
 
 </Project>
